tests/hm_typing/function_copying_sneaky.sy
f :: fn a ->
    b : [*] : [a]
    b[0]' 1
    b[0]' "hello"
    a' "hello"
end

start :: fn do
    f' print
end

// error: $Violating
